[build] remove `--enable-preview` (#6862)
We have no current need for preview features.